5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1758_1183.log
== TEST (2019-05-28 10:16:57) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
while(i<size(a)):
	if(i<0):
		print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:17:28) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
while(i<size(a)):
	if(i<0):
		print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:17:42) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
while(i<size(a)):
	if(i<0):
		print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:35:20) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
while(i<size(a)):
	if(i<0):
		
	
-- EXECUTION TIME:
0.29142
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 8
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:35:34) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
while(i<size(a)):
	if(i<0):
		
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:35:46) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
while(i<size(a)):
	if(i<0):
		
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:43:58) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(a)):
	if(a[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size[a]):
	if(n[a]>0):
		r[b] = n[a]
	a = a+1
print(r)
-- EXECUTION TIME:
0.654872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 12, in <module>
    while(a<size[a]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:44:29) 
-- CODE:
from numpy import *
a = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(a)):
	if(a[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size[a]):
	if(a[a]>0):
		r[b] = n[a]
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:52:42) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size[n]):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:53:18) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- EXECUTION TIME:
0.486755
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:53:32) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:05) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:33) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:49) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:54) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:12) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:19) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:28) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:50) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:51) 
-- CODE:
from numpy import *
n = array(eval(input("digite o vetor: ")))
i = 0
p=0
while(i<size(n)):
	if(n[i]>=0):
		p = p +1
	i = i +1
r = zeros(p, dtype= int)
a = 0
b = 0
while(a<size(n)):
	if(n[a]>0):
		r[b] = n[a]
		b = b +1
	a = a+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
